force-app/main/default/objects/Product2/fields/Carbohydrates__c.field-meta.xml
<CustomField>
    <fullName>Carbohydrates__c</fullName>
    <label>Carbohydrates</label>
    <precision>6</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>