force-app/main/default/objects/Product2/fields/Fats__c.field-meta.xml
<CustomField>
    <fullName>Fats__c</fullName>
    <label>Fats</label>
    <precision>6</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>