force-app/main/default/objects/Product2/fields/Kilocalories__c.field-meta.xml
<CustomField>
    <fullName>Kilocalories__c</fullName>
    <label>Kilocalories</label>
    <precision>6</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>