force-app/main/default/objects/Product2/fields/Proteins__c.field-meta.xml
<CustomField>
    <fullName>Proteins__c</fullName>
    <label>Proteins</label>
    <precision>6</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>