force-app/main/default/objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>Proteins__c</columns>
    <columns>Fats__c</columns>
    <columns>Carbohydrates__c</columns>
    <columns>Kilocalories__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Products</label>
</ListView>